# applied_learning

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml  sonnet-window-revisit-findings.md  sonnet-window-revisit-plan.md
scripts/: run_all_notebooks.ps1  run_all_notebooks.sh
topics/diffusion-models/: README.md
topics/diffusion-models/10-coursework/: courses-resources.md  essentials.md  papers-frontier.md  papers-seminal.md  related-topics.md
topics/diffusion-models/20-mentoring/: open-questions.md  progress.md  seed-ideas.md
topics/diffusion-models/70-handson/: exercises.md
topics/diffusion-models/70-handson/examples/: ddpm_min.py
topics/diffusion-models/70-handson/notebooks/: 01-forward-noising-intuition.ipynb  02-ddpm-from-scratch-2d.ipynb  03-ddpm-mnist.ipynb  04-ddim-and-guidance.ipynb
topics/model-distillation/: README.md
topics/model-distillation/10-coursework/: courses-resources.md  essentials.md  papers-frontier.md  papers-seminal.md  related-topics.md
topics/model-distillation/20-mentoring/: open-questions.md  progress.md  seed-ideas.md
topics/model-distillation/70-handson/: exercises.md
topics/model-distillation/70-handson/examples/: distill_min.py
topics/out-of-distribution-detection/: README.md
topics/out-of-distribution-detection/10-coursework/: courses-resources.md  essentials.md  papers-frontier.md  papers-seminal.md  related-topics.md
topics/out-of-distribution-detection/20-mentoring/: open-questions.md  progress.md  seed-ideas.md
topics/out-of-distribution-detection/70-handson/: exercises.md
(+11 files in other folders)
